maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: '=>' expected but 'while' found.
	case 0 while(!estFaceMur && getDirection() == Direction.NORTH) => avance()
               ^